# ainuKey

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TESTING.md  ainuKey.def  build.ps1  build.rs  build.zig  build.zig.zon  cp.ps1  debug.ps1  install.ps1  resources.rc
.github/workflows/: ci.yml  release.yml
assets/: resources.rc
data/: README.md
installer/: ainuKey.iss  enable-user.ps1
installer/i18n/: Ainu.isl  Korean.isl
src/: candidate_window.rs  candidates.rs  composition.rs  config.rs  configure.rs  consts.zig  display_attribute.rs  dllroot.zig  edit_session.rs  factory.rs  factory.zig  guids.rs  kana.rs  key_event_sink.rs  lang_bar.rs  lib.rs  neural.rs  registry.rs  registry.zig  romaji.rs  service.zig  settings_dialog.rs  suggest.rs  text_input_processor.rs  text_service.rs  thread_mgr_event_sink.rs
src/windows/: category.zig  com.zig  debug.zig  guid.zig  profile.zig  registry.zig  types.zig
tools/: bench_ngrams.py  bench_report.md  build_ngrams.py  generate_time.zig  ngram_lib.py  test_ngram_lib.py
tools/neural/: README.md  compare_ksr.py  eval_ksr.py  export_weights.py  prep_data.py  train.py
